--- a/sample-dev.yml
+++ b/sample-dev.yml
@@ -9,3 +9,4 @@ spring:
 mybatis:
   config-locations: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/**/*.xml
+foo: 123
