--- a/sample-dev.yml
+++ b/sample-dev.yml
@@ -1,12 +1,8 @@
-spring:
-  datasource:
-    name: YPTPDB2
-    url: jdbc:oracle:thin:@172.24.114.170:1521:yptpdb2?useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT%2b8
-    username: cds_dev
-    password: cds_123
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: oracle.jdbc.driver.OracleDriver
-mybatis:
-  config-locations: classpath:mybatis/mybatis-config.xml
-  mapper-locations: classpath:mybatis/mapper/**/*.xml
-foo: 123
+spring.datasource.name=YPTPDB2
+spring.datasource.url=jdbc:oracle:thin:@172.24.114.170:1521:yptpdb2?useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT%2b8
+spring.datasource.username=cds_dev
+spring.datasource.password=cds_123
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.mybatis.config-locations=classpath:mybatis/mybatis-config.xml
+spring.datasource.mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
